prepare for initial heroku push

--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "webpack --watch"
+    "start": "webpack --watch",
+    "postinstall": "webpack"
   },
   "repository": {
     "type": "git",
@@ -33,6 +34,10 @@
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/tommyr418/facebook_lite/issues"
+  },
+  "engines": {
+    "node": "6.10.1",
+    "npm": "3.10.10"
   },
   "homepage": "https://github.com/tommyr418/facebook_lite#readme"
 }
