--- a/test/fixtures/likes.yml
+++ b/test/fixtures/likes.yml
@@ -1,3 +1,15 @@
+# == Schema Information
+#
+# Table name: likes
+#
+#  id           :integer          not null, primary key
+#  user_id      :integer          not null
+#  likable_id   :integer          not null
+#  likable_type :string           not null
+#  created_at   :datetime         not null
+#  updated_at   :datetime         not null
+#
+
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
