--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "faceplace",
   "private": true,
   "dependencies": {
-    "babel-core": "^6.26.3",
-    "babel-loader": "^7.1.5",
-    "babel-preset-es2015": "^6.24.1",
-    "babel-preset-react": "^6.24.1",
+    "@babel/core": "^7.3.3",
+    "@babel/preset-env": "^7.3.1",
+    "@babel/preset-react": "^7.0.0",
+    "babel-loader": "^8.0.5",
     "lodash": "^4.17.11",
     "react": "^16.8.3",
     "react-click-outside": "^3.0.1",
@@ -44,5 +44,8 @@
     "node": "6.10.1",
     "npm": "3.10.10"
   },
-  "homepage": "https://github.com/tommyr418/FacePlace#readme"
+  "homepage": "https://github.com/tommyr418/FacePlace#readme",
+  "devDependencies": {
+    "@babel/plugin-proposal-class-properties": "^7.3.3"
+  }
 }
