--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "faceplace",
   "private": true,
   "dependencies": {
+    "classnames": "^2.2.6",
     "lodash": "^4.17.11",
     "react": "^16.8.4",
     "react-click-outside": "^3.0.1",
