--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-tooltip": "^3.11.1",
     "redux": "^3.7.2",
     "redux-thunk": "^2.3.0",
+    "uglifyjs-webpack-plugin": "^2.2.0",
     "webpack": "^4.0.0"
   },
   "description": "This README would normally document whatever steps are necessary to get the application up and running.",
@@ -49,6 +50,7 @@
     "babel-loader": "^8.0.6",
     "css-loader": "^2.1.1",
     "redux-logger": "^3.0.6",
-    "style-loader": "^0.23.1"
+    "style-loader": "^0.23.1",
+    "webpack-cli": "^3.3.10"
   }
 }
